Adress the overflow issue

--- a/public/style.css
+++ b/public/style.css
@@ -1007,6 +1007,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     right: -9rem;
   }
 
+  .lg\:-bottom-32 {
+    bottom: -8rem;
+  }
+
   .lg\:my-8 {
     margin-top: 2rem;
     margin-bottom: 2rem;
